--- a/Acetone_synthesis.ipynb
+++ b/Acetone_synthesis.ipynb
@@ -115,6 +115,69 @@
     "#plt.close()\n",
     "#print(\"Save completed (check directory).\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e0cdc9f-9484-4d4c-afc7-47eab807354b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ask user for confirmation\n",
+    "run_script = input(\"\\n(▀̿Ĺ̯▀̿ ̿) Do you want to execute the reaction processing? [Y/n]:\\n\\n\").strip().lower()\n",
+    "\n",
+    "# Only proceed if the user agrees\n",
+    "if run_script in [\"\", \"y\", \"yes\"]:  # Default to \"yes\" if empty input\n",
+    "    from rdkit import Chem\n",
+    "    from rdkit.Chem import Draw\n",
+    "    from rdkit.Chem import rdChemReactions\n",
+    "    from PIL import Image\n",
+    "    import re\n",
+    "    import os\n",
+    "\n",
+    "    # Output folder\n",
+    "    #output_dir = \"/tmp/reactions\"  # Change as needed\n",
+    "    output_dir = \"\"  # Change as needed\n",
+    "    \n",
+    "    # Function to clean and expand reaction SMILES\n",
+    "    def process_smiles(smiles):\n",
+    "        # Remove reagents/catalysts (text between \">...>\")\n",
+    "        cleaned_smiles = re.sub(r'>[^>]+>', '>>', smiles)\n",
+    "    \n",
+    "        # Expand {n} notation: \"{2}C=CC\" → \"C=CC.C=CC\"\n",
+    "        def expand_match(match):\n",
+    "            n = int(match.group(1))  # Extract number\n",
+    "            molecule = match.group(2)  # Extract SMILES\n",
+    "            return \".\".join([molecule] * n)  # If stoichiometric coefficient found, repeat SMILES n times (works only with integer coefficients!)\n",
+    "    \n",
+    "        expanded_smiles = re.sub(r'\\{(\\d+)\\}([A-Za-z0-9@+\\-=#()\\[\\]]+)', expand_match, cleaned_smiles)\n",
+    "        \n",
+    "        return expanded_smiles\n",
+    "    \n",
+    "    # Loop through each reaction and plot separately\n",
+    "    for reaction_smiles, name in reactions_smiles_pathway.items():\n",
+    "        cleaned_smiles = process_smiles(reaction_smiles)  # Process SMILES\n",
+    "        print(f\"Processing: {name}, SMILES: {cleaned_smiles}\")\n",
+    "    \n",
+    "        try:\n",
+    "            # Convert to RDKit reaction object\n",
+    "            reaction = rdChemReactions.ReactionFromSmarts(cleaned_smiles, useSmiles=True)\n",
+    "    \n",
+    "            # Generate reaction image\n",
+    "            img = Draw.ReactionToImage(reaction, subImgSize=(300, 300))\n",
+    "    \n",
+    "            # Save path\n",
+    "            save_path = os.path.join(output_dir, f\"{name}.png\")\n",
+    "            img.save(save_path, format=\"PNG\", dpi=(300, 300))\n",
+    "    \n",
+    "            print(f\"Saved: {save_path}\")\n",
+    "    \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {name}: {e}\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"Script execution skipped.\")"
+   ]
   }
  ],
  "metadata": {
