--- a/BHC_Company_synthesis_of_ibuprofen.ipynb
+++ b/BHC_Company_synthesis_of_ibuprofen.ipynb
@@ -33,10 +33,7 @@
    "id": "3c8fde2a-571a-4665-9df9-8a045021ecfb",
    "metadata": {},
    "source": [
-    "---\n",
-    "Calculate atom economy for individual synthesis steps\n",
-    "\n",
-    "---"
+    "#### Calculate atom economy for individual synthesis steps"
    ]
   },
   {
@@ -58,7 +55,8 @@
     "\n",
     "# Loop through each line and call get_atom_economy for each one\n",
     "for i, line in enumerate(lines):\n",
-    "    step_key = f\"Step {i+1}\"  # Create Step 1, Step 2, ..., Step n\n",
+    "    # Create Step 1, Step 2, ..., Step n\n",
+    "    step_key = f\"Step {i+1}\"\n",
     "    # Call the function and store the result\n",
     "    results_individual[step_key] = get_atom_economy(line)\n",
     "\n",
@@ -75,10 +73,7 @@
    "id": "f3acf3f4-38ab-42ae-bf02-3babd340840d",
    "metadata": {},
    "source": [
-    "---\n",
-    "Calculate atom economy for cumulative synthesis steps\n",
-    "\n",
-    "---"
+    "#### Calculate atom economy for cumulative synthesis steps"
    ]
   },
   {
@@ -95,7 +90,8 @@
     "results_cumulative = {}\n",
     "\n",
     "# Loop through each incremental combination of lines and call get_atom_economy\n",
-    "for i in range(1, len(lines) + 1):  # Start from 1 to n\n",
+    "# Start from 1 to n\n",
+    "for i in range(1, len(lines) + 1): \n",
     "    # Get the first i lines\n",
     "    combined_reactions = \"\\n\".join(lines[:i])\n",
     "    \n",
@@ -130,7 +126,9 @@
     "\n",
     "# Extract the steps (x-axis) and Atom Economy values (y-axis) for \\\n",
     "# both individual and cumulative\n",
-    "steps = list(results_individual.keys())  # Step names: ['step_1', 'step_2', ...]\n",
+    "\n",
+    "# Step names: ['step_1', 'step_2', ...]\n",
+    "steps = list(results_individual.keys())\n",
     "# Atom Economy values for individual reactions\n",
     "individual_values = list(results_individual.values())\n",
     "# Atom Economy values for cumulative reactions\n",
@@ -141,11 +139,14 @@
     "byproduct_values = [100 - value for value in individual_values]\n",
     "\n",
     "# Create a single plot\n",
-    "fig, ax = plt.subplots(figsize=(10, 7))  # Single axis for both plots\n",
+    "\n",
+    "# Single axis for both plots\n",
+    "fig, ax = plt.subplots(figsize=(10, 7))\n",
     "plt.rcParams.update({'font.size': 16})\n",
     "\n",
     "# Plot the stem plot for cumulative Atom Economy values in black\n",
-    "ax.stem(steps, cumulative_values, linefmt='k:', markerfmt='k>:', basefmt=\" \", label=\"Cumulative Atom Economy\").markerline.set_markersize(10)\n",
+    "ax.stem(steps, cumulative_values, linefmt='k:', markerfmt='k>:', basefmt=\" \", \\\n",
+    "        label=\"Cumulative Atom Economy\").markerline.set_markersize(10)\n",
     "\n",
     "# Bar plot for individual Atom Economy values\n",
     "bars = ax.bar(steps, individual_values, color='#009E73', \\\n",
@@ -163,7 +164,8 @@
     "ax.set_title('BHC Atom Economy: Individual- and Cumulative Steps\\n\\n\\n')\n",
     "ax.set_xlabel('\\nSteps')\n",
     "ax.set_ylabel('Atom Economy (%)')\n",
-    "ax.set_ylim(0, 100)  # Set Y-axis from 0 to 100%\n",
+    "# Set Y-axis from 0 to 100%\n",
+    "ax.set_ylim(0, 100)\n",
     "\n",
     "# Add the legend\n",
     "ax.legend(loc='upper center', bbox_to_anchor=(0.5, 1.2), ncol=3,reverse=True)\n",
@@ -173,8 +175,7 @@
     "\n",
     "# Show the plot\n",
     "plt.show()\n",
-    "\n",
-    "# Save the plot\n",
+    "# To save the plot, if used, comment line above and uncomment lines below\n",
     "#save_path = '/tmp/BHC_histogram.png'  # Writable on many systems\n",
     "#plt.draw()  # Force render\n",
     "#print(f\"Saving to: {save_path}\")\n",
