--- a/PDFs/BHC_Company_synthesis_of_ibuprofen.ipynb
+++ b/PDFs/BHC_Company_synthesis_of_ibuprofen.ipynb
@@ -2,41 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "832cd554-578e-4fa5-b8da-56a4d20b9fe2",
+   "id": "210ae32c-766a-40a0-bbd2-d2155827bd44",
    "metadata": {},
    "source": [
-    "### The Boots Company synthesis of ibuprofen (1960's)\n",
+    "### The BHC Company synthesis of ibuprofen (1990's): the green synthesis\n",
     "\n",
-    "`CC(C)Cc1ccccc1.CC(=O)OC(C)=O>[Al](Cl)(Cl)Cl>CC(=O)c1ccc(CC(C)C)cc1` \\\n",
-    "`CC(=O)c1ccc(CC(C)C)cc1.[Na+].CC[O-].CCOC(=O)CCl>>CCOC(=O)C1OC1(C)c2ccc(CC(C)C)cc2` \\\n",
-    "`CCOC(=O)C1OC1(C)c2ccc(CC(C)C)cc2.[OH3+]>>CC(C)Cc1ccc(C(C)C=O)cc1` \\\n",
-    "`CC(C)Cc1ccc(C(C)C=O)cc1.NO>>CC(C)Cc1ccc(C(C)C=NO)cc1` \\\n",
-    "`CC(C)Cc1ccc(C(C)C=NO)cc1>>CC(C)Cc1ccc(C(C)C#N)cc1` \\\n",
-    "`CC(C)Cc1ccc(C(C)C#N)cc1.{2}O>>CC(C)Cc1ccc(C(C)C(=O)O)cc1`"
+    "CC(C)Cc1ccccc1.CC(=O)OC(C)=O>F>CC(=O)c1ccc(CC(C)C)cc1\\\n",
+    "CC(=O)c1ccc(CC(C)C)cc1.[HH]>Ni-Raney>CC(C)Cc1ccc(C(C)O)cc1\\\n",
+    "CC(C)Cc1ccc(C(C)O)cc1.[C-]#[O+]>Pd>CC(C)Cc1ccc(C(C)C(=O)O)cc1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec0181f6-1b7c-406b-9e15-ea4582535559",
+   "id": "0d1b33e6-d498-4cee-95df-02444b6a7097",
    "metadata": {},
    "outputs": [],
    "source": [
     "from rxnSMILES4AtomEco import atom_economy\n",
     "\n",
     "#use triple quotes (\"\"\") to define a multiline string\n",
-    "reactions_smiles = \"\"\"CC(C)Cc1ccccc1.CC(=O)OC(C)=O>Al(Cl)Cl>CC(=O)c1ccc(CC(C)C)cc1\n",
-    "CC(=O)c1ccc(CC(C)C)cc1.[Na+].CC[O-].CCOC(=O)CCl>>CCOC(=O)C1OC1(C)c2ccc(CC(C)C)cc2\n",
-    "CCOC(=O)C1OC1(C)c2ccc(CC(C)C)cc2.[OH3+]>>CC(C)Cc1ccc(C(C)C=O)cc1\n",
-    "CC(C)Cc1ccc(C(C)C=O)cc1.NO>>CC(C)Cc1ccc(C(C)C=NO)cc1\n",
-    "CC(C)Cc1ccc(C(C)C=NO)cc1>>CC(C)Cc1ccc(C(C)C#N)cc1\n",
-    "CC(C)Cc1ccc(C(C)C#N)cc1.{2}O>>CC(C)Cc1ccc(C(C)C(=O)O)cc1\"\"\"\n",
+    "reactions_smiles = \"\"\"CC(C)Cc1ccccc1.CC(=O)OC(C)=O>F>CC(=O)c1ccc(CC(C)C)cc1\n",
+    "CC(=O)c1ccc(CC(C)C)cc1.[HH]>Ni-Raney>CC(C)Cc1ccc(C(C)O)cc1\n",
+    "CC(C)Cc1ccc(C(C)O)cc1.[C-]#[O+]>Pd>CC(C)Cc1ccc(C(C)C(=O)O)cc1\"\"\"\n",
     "atom_economy(reactions_smiles)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b1ddda5-9431-4908-984c-1d39ff521ea9",
+   "id": "3c8fde2a-571a-4665-9df9-8a045021ecfb",
    "metadata": {},
    "source": [
     "---\n",
@@ -48,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68cd6e47-24a0-4ec9-9dd0-326b0ce712d9",
+   "id": "b8de4a40-04ac-49f1-933c-5ddc8515bb26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +62,8 @@
     "    # Call the function and store the result\n",
     "    results_individual[step_key] = get_atom_economy(line)\n",
     "\n",
-    "# Now, 'results' contains the results for each line, \\\n",
-    "# e.g., results[\"Step 1\"], results[\"Step 2\"], etc.\n",
+    "# Now, 'results' contains the results for each line, e.g., \\\n",
+    "# results[\"Step 1\"], results[\"Step 2\"], etc.\n",
     "\n",
     "# Example: Print all results\n",
     "for step, result_individual in results_individual.items():\n",
@@ -78,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d876590d-94ab-405f-98c0-e1d629b5eae9",
+   "id": "f3acf3f4-38ab-42ae-bf02-3babd340840d",
    "metadata": {},
    "source": [
     "---\n",
@@ -90,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "817b35c6-5e2e-4e23-9163-d93b3f4a06c9",
+   "id": "c510080f-08bb-45f3-bbae-724d0f8df890",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +100,7 @@
     "    combined_reactions = \"\\n\".join(lines[:i])\n",
     "    \n",
     "    # Call get_atom_economy with the combined lines up to the current step\n",
-    "    step_key = f\"Step_{i}\"\n",
+    "    step_key = f\"Step {i}\"\n",
     "    # Store the result\n",
     "    results_cumulative[step_key] = get_atom_economy(combined_reactions)\n",
     "    \n",
@@ -115,16 +109,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c5bf30f-b4db-4a21-b7c6-01701808fe78",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Multiplot of individual and cumulative atom economy\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2df6009c-a01c-47b2-97c3-6fe9f7f2145b",
+   "id": "655fb9d7-e930-437d-934a-ff29bae4e13b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Extract the steps (x-axis) and Atom Economy values (y-axis) \\\n",
-    "# for both individual and cumulative\n",
+    "# Extract the steps (x-axis) and Atom Economy values (y-axis) for \\\n",
+    "# both individual and cumulative\n",
     "steps = list(results_individual.keys())  # Step names: ['step_1', 'step_2', ...]\n",
     "# Atom Economy values for individual reactions\n",
     "individual_values = list(results_individual.values())\n",
@@ -140,8 +145,7 @@
     "plt.rcParams.update({'font.size': 16})\n",
     "\n",
     "# Plot the stem plot for cumulative Atom Economy values in black\n",
-    "ax.stem(steps, cumulative_values, linefmt='k:', markerfmt='k>:', basefmt=\" \", \\\n",
-    "        label=\"Cumulative Atom Economy\").markerline.set_markersize(10)\n",
+    "ax.stem(steps, cumulative_values, linefmt='k:', markerfmt='k>:', basefmt=\" \", label=\"Cumulative Atom Economy\").markerline.set_markersize(10)\n",
     "\n",
     "# Bar plot for individual Atom Economy values\n",
     "bars = ax.bar(steps, individual_values, color='#009E73', \\\n",
@@ -156,12 +160,10 @@
     "             ha='center', va='center', color='white', fontweight='bold')\n",
     "\n",
     "# Add labels and titles\n",
-    "ax.set_title('Boots Atom Economy: Individual- and Cumulative Steps\\n\\n\\n')\n",
+    "ax.set_title('BHC Atom Economy: Individual- and Cumulative Steps\\n\\n\\n')\n",
     "ax.set_xlabel('\\nSteps')\n",
     "ax.set_ylabel('Atom Economy (%)')\n",
     "ax.set_ylim(0, 100)  # Set Y-axis from 0 to 100%\n",
-    "#ax.tick_params(axis='x', rotation=45)  # Rotate x-axis labels \\\n",
-    "# for better readability\n",
     "\n",
     "# Add the legend\n",
     "ax.legend(loc='upper center', bbox_to_anchor=(0.5, 1.2), ncol=3,reverse=True)\n",
@@ -173,7 +175,7 @@
     "plt.show()\n",
     "\n",
     "# Save the plot\n",
-    "#save_path = '/tmp/Boots_histogram.png'  # Writable on many systems\n",
+    "#save_path = '/tmp/BHC_histogram.png'  # Writable on many systems\n",
     "#plt.draw()  # Force render\n",
     "#print(f\"Saving to: {save_path}\")\n",
     "#plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
