--- a/Acetone_synthesis.ipynb
+++ b/Acetone_synthesis.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Ask user for confirmation\n",
-    "run_script = input(\"\\n(▀̿Ĺ̯▀̿ ̿) Do you want to execute the reaction processing? \\\n",
+    "run_script = input(\"\\n(▀̿Ĺ̯▀̿) Do you want to execute the reaction processing? \\\n",
     "                   [Y/n]:\\n\\n\").strip().lower()\n",
     "\n",
     "# Only proceed if the user agrees\n",
@@ -197,11 +197,19 @@
     "else:\n",
     "    print(\"Script execution skipped.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8478089",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
