--- a/Boots_Company_synthesis_of_ibuprofen.ipynb
+++ b/Boots_Company_synthesis_of_ibuprofen.ipynb
@@ -111,6 +111,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83868733",
+   "metadata": {},
+   "source": [
+    "#### Multiplot of individual and cumulative atom economy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2df6009c-a01c-47b2-97c3-6fe9f7f2145b",
