--- a/BHC_Company_synthesis_of_ibuprofen.ipynb
+++ b/BHC_Company_synthesis_of_ibuprofen.ipynb
@@ -109,10 +109,7 @@
    "id": "0c5bf30f-b4db-4a21-b7c6-01701808fe78",
    "metadata": {},
    "source": [
-    "---\n",
-    "Multiplot of individual and cumulative atom economy\n",
-    "\n",
-    "---"
+    "#### Multiplot of individual and cumulative atom economy"
    ]
   },
   {
@@ -187,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
