--- a/Boots_Company_synthesis_of_ibuprofen.ipynb
+++ b/Boots_Company_synthesis_of_ibuprofen.ipynb
@@ -192,11 +192,19 @@
     "#plt.close()\n",
     "#print(\"Save completed (check directory).\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c15c373f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
