--- a/README.ipynb
+++ b/README.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "from rxnSMILES4AtomEco import atom_economy\n",
     "reactions_smiles = \"C.O>catalyst>{3}[HH]\"\n",
-    "atom_economy(reactions_smiles)firstName"
+    "atom_economy(reactions_smiles)"
    ]
   },
   {
@@ -70,11 +70,19 @@
     "value = get_atom_economy(reactions_smiles)\n",
     "print(value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcda9f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
