--- a/BHC_Company_synthesis_of_ibuprofen.ipynb
+++ b/BHC_Company_synthesis_of_ibuprofen.ipynb
@@ -173,29 +173,13 @@
     "# Show the plot\n",
     "plt.show()\n",
     "# To save the plot, if used, comment line above and uncomment lines below\n",
-    "#save_path = '/tmp/BHC_histogram.png'  # Writable on many systems\n",
+    "#save_path = './BHC_histogram.png'  # Writable on many systems\n",
     "#plt.draw()  # Force render\n",
     "#print(f\"Saving to: {save_path}\")\n",
     "#plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
     "#plt.close()\n",
     "#print(\"Save completed (check directory).\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3073208d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36d7a028",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
