--- a/Boots_Company_synthesis_of_ibuprofen.ipynb
+++ b/Boots_Company_synthesis_of_ibuprofen.ipynb
@@ -185,21 +185,13 @@
     "plt.show()\n",
     "# Save the plot\n",
     "# To save the plot, if used, comment line above and uncomment lines below\n",
-    "#save_path = '/tmp/Boots_histogram.png'  # Writable on many systems\n",
+    "#save_path = './Boots_histogram.png'  # Writable on many systems\n",
     "#plt.draw()  # Force render\n",
     "#print(f\"Saving to: {save_path}\")\n",
     "#plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
     "#plt.close()\n",
     "#print(\"Save completed (check directory).\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c15c373f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
