--- a/Acetone_synthesis.ipynb
+++ b/Acetone_synthesis.ipynb
@@ -149,7 +149,7 @@
     "    import os\n",
     "\n",
     "    # Output folder, change as needed\n",
-    "    output_dir = \"\"\n",
+    "    output_dir = \"./\"\n",
     "\n",
     "    # Function to clean and expand reaction SMILES\n",
     "    def process_smiles(smiles):\n",
@@ -186,7 +186,7 @@
     "            img = Draw.ReactionToImage(reaction, subImgSize=(300, 300))\n",
     "    \n",
     "            # Save path\n",
-    "            save_path = os.path.join(output_dir, f\"{name}.png\")\n",
+    "            save_path = os.path.join(output_dir, f\"{name}_rxn.png\")\n",
     "            img.save(save_path, format=\"PNG\", dpi=(300, 300))\n",
     "    \n",
     "            print(f\"Saved: {save_path}\")\n",
@@ -197,14 +197,6 @@
     "else:\n",
     "    print(\"Script execution skipped.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8478089",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
